--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <canvas id="myCanvas"></canvas>
     
     <script src="app.js" type="text/javascript" async></script>
 </body>
