--- a/RunningChef/www/index.html
+++ b/RunningChef/www/index.html
@@ -27,9 +27,14 @@
 
 
         <div class="scenery">
+            <div class="score_container">
+                <h1>SCORE</h1>
+                <h1 class="score">0</h1>
+            </div>
             <div class="player"></div>
             <div class="floor"></div>
             <!-- <div class="food"></div> -->
+            
             
 
 
