--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
 <body>
 
         <div class="start-menu">
-
-            <div class="settings-button-container">
-                <button class="settings-button"></button>
-            </div>
             <div class="logo"></div>
-
-            <button class="del-ads">Turn off ads!</button>
-
-            <div class="menu-buttons-container">
-                <button class="stats-button"></button>
-                <button class="start-button"></button>
-                <button class="profile-button"></button>
-            </div>
+            <button class="start-button"></button>
+            <button class="skin-button"></button>
+            <button class="shop-button"></button>  
         </div>
 
+        <div class="dead-container">
+            <div class="timer-container">
+                <div class="reviveq"></div>
+                <div class="timer"></div>
+            </div>
+            <div class="ad-container">
+                <button class="advert"></button>
+                <button class="cancel"></button>
+            </div>
+        </div>
 
         <div class="scenery">
             <div class="score_container">
@@ -33,20 +34,6 @@
             </div>
             <div class="player"></div>
             <div class="floor"></div>
-            <!-- <div class="food"></div> -->
-            
-            
-
-
-
-
-
-
-
-
-
-
-
         </div>
 
 
